# oishii

./: .gitignore  LICENSE  Procfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
oishii/: asgi.py  settings.py  urls.py  wsgi.py
places/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
places/migrations/: 0001_initial.py  0002_review.py  0003_alter_pin_unique_together.py  0004_alter_list_options_list_position.py  0005_photo.py  0006_review_would_go_again.py
scripts/: london_trendy_restaurants_100_with_addresses.csv  london_trendy_restaurants_100_with_coordinates.csv  paris_restaurants_with_coordinates.csv
social/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
social/migrations/: 0001_initial.py  0002_activity_comment_like.py  0003_profile.py  0004_notification.py  0005_notification_like_notification_notification_type_and_more.py  0006_remove_notification_like_and_more.py  0007_commentlike.py  0008_profile_favorite_cuisines_profile_favorite_spots.py  0009_notification_comment_like_notification_like_and_more.py
static/css/: app.css
templates/: base.html  home.html
templates/components/: stars.html
templates/places/: _list_count.html  _list_create_modal.html  _list_edit_modal.html  _list_picker.html  _list_picker_row.html  _pin_button.html  _restaurant_card.html  _reviews_section.html  discover.html  home.html  list_detail.html  my_restaurants.html  restaurant_detail.html  review_edit.html  review_form.html  review_tab.html  review_thanks.html
templates/registration/: login.html  signup.html
templates/scripts/: google_maps.html
(+22 files in other folders)
