[project]
name = "oishii"
version = "0.1.0"
description = ""
authors = [
    {name = "Ratuja Reddy",email = "ratuja@runna.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-htmx (>=1.24.1,<2.0.0)",
    "whitenoise (>=6.10.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
